# Fortuna

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  Makefile  attacks.cpp  attacks.h  board.cpp  board.h  cmake_install.cmake  defines.h  eval.cpp  eval.h  eval_defines.cpp  eval_defines.h  history.cpp  history.h  magic.h  main.cpp  move.h  movegen.cpp  movegen.h  moveorder.cpp  moveorder.h  nnue_eval.cpp  nnue_eval.h  search.cpp  search.h  tables.h  timeman.cpp  timeman.h  ttable.cpp  ttable.h  uci.cpp  uci.h  util.cpp  util.h  zobrist.cpp  zobrist.h
src/nnue/: nnue.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  tests.cpp
